advanced atmMapper
